Sep 20, 2007

* ENHANCED: Message on wrong error

* DOCS: Fixed typos.  Ulrich Neumerkel.

* FIXED: avoid a loop if a test throws an error holding a cyclic term.

* MODIFIED: errors are now verified using subsumes_chk/2 instead of =@=.

* PORT: =@= is now correctly bound to variant/2 for SICStus.

Aug 1, 2007

* FIXED: Ran failing tests twice due to unwanted choicepoint.

Jul 30, 2007

* ADDED: allow for error(Error) as alias for throws(error(Error, _)).

Mar 28, 2007

* ADDED: option silent(Bool) to force completely silent operation.

Mar 6, 2007

* Allow for single option without list

Nov 23, 2006

* Force start of line after ....

Oct 22, 2006

* Allow tracing body of tests.  Suggested by Lukas Degener.

Oct 17, 2006

* Portability with SICStus 3.12.

Oct 13, 2006

* Better message for tests that succeeded but should have failed