@@ -75,7 +75,7 @@ test(read, T == foo(a)) :-
 
 :- begin_tests(atom_to_term).
 
-test(read, T-V == foo(A)-[A = 'A'] ) :-
+test(read, T-V =@= foo(A)-['A' = A] ) :-
 	atom_to_term('foo(A)', T, V).
 test(error, error(instantiation_error)) :-
 	atom_to_term(_, _, _).
